Fixed card width on uneven content length

--- a/src/scss/pages/_about-me.scss
+++ b/src/scss/pages/_about-me.scss
@@ -109,6 +109,7 @@
 
         background: $grey-200;
         border-radius: $border-radius;
+        flex: 1;
         margin: line-height(default) * 1;
         overflow: hidden;
         padding: line-height(default);
